# CORTAP-RPT

./: .env.example  .gitignore  .samignore  AUTHENTICATION-ANALYSIS.md  CHECK-CLOUDWATCH-LOGS.md  CHECK-DEPLOYMENT-STATUS.sh  COGNITO-BYPASS-ANALYSIS.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-SUCCESS-2026-02-27.md  EMAIL-TO-RISKUITY-DEVELOPER.md  PRODUCTION-AUTHENTICATION-STRATEGY.md  QUICK-START-AWS.md  README.md  RISKUITY-DEVELOPER-TOKEN-GUIDE.md  SESSION-SUMMARY-2026-02-12.md  TOKEN-TYPE-MISMATCH-ISSUE.md  build-lambda.sh  deploy-fix.sh  pyproject.toml  quick-deploy.sh  requirements.txt  samconfig.toml  template.yaml  verify-deployment.sh
.bmad-ephemeral/: sprint-status.yaml
app/: config.py  exceptions.py  main.py
config/: README.md  project-setup-schema.json  project-setup-template.xlsx  project-setup.json
docs/: AWS-DEPLOYMENT-GUIDE.md  AWS-MFA-SETUP.md  AWS-SETUP-GUIDE.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  FY26-REVIEW-AREA-MAPPING.md  INTEGRATION-IMPLEMENTATION-PLAN.md  LAMBDA-TROUBLESHOOTING-SESSION-2026-02-25.md  NEXT-STEPS-AWS-SETUP.md  PRD.md  PROJECT-STATUS-2025-02-09.md  PROJECT-STATUS-2025-02-10.md  PROJECT-STATUS-2025-02-11.md  QUICK-START-original-template.md  RISKUITY-API-TEST-RESULTS.md  RISKUITY-AUTHENTICATION-GUIDE.md  RISKUITY-CONFIGURATION-TODO.md  RISKUITY-CORTAP-INTEGRATION-SPEC.md  RISKUITY-DATA-MAPPING-ANALYSIS.md  RISKUITY-FRONTEND-INTEGRATION.md  RISKUITY-TEAM-EMAIL.md  RISKUITY-TO-JSON-MAPPING.md  SESSION-SUMMARY-2026-02-11.md  TRANSFORMATION-IMPLEMENTATION-COMPLETE.md  architecture.md  aws-govcloud-migration-plan.md  bmm-brainstorming-session-2025-11-12.md  bmm-workflow-status.yaml  draft-report-actual-field-mapping.md  draft-report-conversion-quickstart.md  draft-report-data-source-mapping.md  draft-report-field-inventory.md  draft-report-json-structure.md  draft-report-poc-plan.md  epics-integration-addon.md  epics.md  implementation-readiness-report-2025-11-12.md  incremental-build-from-original.md  incremental-template-build-guide.md  (+9 more)
scripts/: debug_jinja.py  (+63 more)
(+110 files in other folders)
